# DronePX4

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_bridge.py  test_gps.py  test_mav.py
config/gazebo/worlds/: inspection_site.sdf
config/px4_params/: sitl.params  sitl_overrides.sh
config/vehicle/: sim_config.yaml
docker/: Dockerfile.sitl  docker-compose.yml
docs/: architecture.md  runbook.md  setup_guide.md  testing_guide.md
scripts/: colorize_output.py  launch_sitl.sh  run_mission.py  run_tests.sh  setup_env.sh
src/: __init__.py  factory.py
src/bridge/: __init__.py  commands.py  mavlink_bridge.py  telemetry.py
src/core/: __init__.py  events.py  geo.py  interfaces.py  types.py
src/dashboard/: __init__.py
src/dashboard/backend/: __init__.py  dependencies.py  main.py
src/dashboard/backend/api/: __init__.py  reports.py
src/dashboard/backend/data/reports/: detection_report.csv
src/dashboard/backend/models/: __init__.py  schemas.py
src/dashboard/backend/routers/: detections.py  mission.py  reports.py  telemetry.py  video.py
src/dashboard/frontend/: index.html  package-lock.json  package.json
src/dashboard/frontend/src/: App.jsx
src/dashboard/frontend/src/components/: DetectionLog.jsx  DroneMap.jsx  MissionControl.jsx  StatusBar.jsx  TelemetryPanel.jsx  VideoFeed.jsx
src/dashboard/frontend/src/styles/: index.css
src/mission/: __init__.py  executor.py  safety.py  state_machine.py  waypoint_planner.py
src/mission/states/: __init__.py
src/perception/: __init__.py  camera.py  detector.py  geotagging.py  tracker.py
src/streaming/: __init__.py  overlay.py  video_server.py
src/utils/: __init__.py  config_loader.py  logger.py
tests/: conftest.py
tests/failsafe/: __init__.py  conftest.py  test_abort_recovery.py  test_altitude_limit.py  test_battery_failsafe.py  test_geofence.py  test_loss_of_link.py
tests/hitl/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_event_bus_integration.py  test_factory_integration.py  test_perception_pipeline.py  test_safety_integration.py
tests/protocol/: __init__.py  conftest.py  test_command_reliability.py  test_mavlink_integrity.py  test_telemetry_rate.py
tests/sitl/: __init__.py  conftest.py  test_connection.py  test_full_mission.py  test_takeoff_land.py  test_waypoint_navigation.py
tests/traceability/: coverage_report.py  requirements_matrix.yaml
tests/unit/: test_bridge_unit.py  test_core.py  test_executor_unit.py  test_factory_unit.py  test_flight_commands_unit.py  test_geotagging.py  test_safety.py  test_simulated_detections.py  test_state_machine.py  test_tracker.py  test_waypoint_planner.py
